[gd_scene load_steps=5 format=3 uid="uid://b5sbbfmswa7v5"]

[ext_resource type="Script" uid="uid://v3okdnah4w1l" path="res://src/controllers/weapons/bullet/BulletAttack.gd" id="1_70nx8"]
[ext_resource type="Texture2D" uid="uid://dkjuls5uw3sc3" path="res://assets/sprites/weapons/bullet/bullet02.png" id="2_jghcl"]
[ext_resource type="Script" uid="uid://cqqypi7jwwheo" path="res://src/attacks/components/AttackComponent.gd" id="3_je3pf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jghcl"]
radius = 7.0

[node name="Bullet" type="Area2D"]
collision_layer = 32
collision_mask = 16
script = ExtResource("1_70nx8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jghcl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jghcl")

[node name="AttackComponent" type="Node" parent="." node_paths=PackedStringArray("area")]
unique_name_in_owner = true
script = ExtResource("3_je3pf")
damage = 2.0
area = NodePath("..")
metadata/_custom_type_script = "uid://cqqypi7jwwheo"

[connection signal="attack_hit" from="AttackComponent" to="." method="_on_attack_component_attack_hit"]
